--- a/style.css
+++ b/style.css
@@ -17,19 +17,38 @@
     transition: background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
-@media (max-width: 420px) and (orientation: portrait), (max-height: 560px){
+@media (max-width: 420px) and (orientation: portrait), (max-height: 100vh){
 .app{
     display: flex;
     align-items: center;
     padding: 1rem 0.6rem;
-    width: 100%;
+    justify-content: center;
+    max-width: 100%;
     height: 100vh;
 }
 
 .app .status{
-    width: 100%;
+    max-width: 100%;
+    height: 80%;
 }
 
+}
+
+@media (max-width: 768px) and (orientation: portrait),(max-height: 100vh) {
+    .app{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem 0.6rem;
+        max-width: 100%;
+        height: 100vh;
+    }
+    
+    .app .status{
+        max-width: 100%;
+        height: 60%;
+    }
+    
 }
 
 .app{
@@ -74,6 +93,8 @@ p:first-child{
 .logo{
     font-weight: bold;
     color: var(--brand-color);
+    font-size: 130%;
+    white-space: pre-line;
 }
 
 button{
